# nights-dreams-of-danmaku

./: .gitignore  CMakeLists.txt  LICENSE.md  changelog.txt  nights-dreams-of-danmaku.7z  research.txt
include/: angle.h  assert_with_message.h  components.h  constants.h  danmaku.h  input.h  math_utils.h  player.h  prev.h  services.h  signals.h  ui.h
include/attacks/: attack.h
include/attacks/gillwing/: wave.h
include/bosses/: boss.h  gillwing.h
include/resource/: audio.h  resource.h  shaders.h  texture.h
res/shaders/: danmaku.frag  disintegrate.frag  ideya.frag
res_src/: gillwing.blend  gillwing.pdn  ideya.pdn
src/: angle.cpp  angle.ixx  audio.ixx  components.cpp  constants.cpp  danmaku.cpp  input.cpp  input.ixx  main.cpp  math_utils.cpp  math_utils.ixx  player.cpp  prev.cpp  services.cpp  ui.cpp  ui.ixx
src/attacks/: attack.cpp
src/attacks/gillwing/: wave.cpp
src/bosses/: boss.cpp  gillwing.cpp
src/resource/: audio.cpp  audio.ixx  resource.ixx  shaders.cpp  texture.cpp  texture.ixx
